--- a/CounterGame/app/src/main/res/values/colors.xml
+++ b/CounterGame/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f06292</color>
-    <color name="colorPrimaryDark">#e91e63</color>
-    <color name="colorAccent">#64dd17</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#ffffff</color>
 </resources>
