--- a/CounterGame/app/src/main/res/values/dimens.xml
+++ b/CounterGame/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
-    <dimen name="bottombar_size">50dp</dimen>
+    <dimen name="bottombar_size">60dp</dimen>
+    <dimen name="bottombar_icon_topmargin">10dp</dimen>
 </resources>
