--- a/Youth/Youth/Base.lproj/Main.storyboard
+++ b/Youth/Youth/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,57 +22,69 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0PF-Ds-QaX">
-                                <rect key="frame" x="0.0" y="20" width="375" height="547"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="563"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="schedule" translatesAutoresizingMaskIntoConstraints="NO" id="sOc-6Z-r6T">
-                                <rect key="frame" x="42" y="591" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="Pqv-oM-kDt"/>
-                                    <constraint firstAttribute="width" constant="50" id="bCr-ns-DBs"/>
-                                </constraints>
+                            <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="GUc-aH-Sl0">
+                                <rect key="frame" x="0.0" y="20" width="375" height="2"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </progressView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" image="home" highlightedImage="home_w" translatesAutoresizingMaskIntoConstraints="NO" id="OBM-Jl-v46">
+                                <rect key="frame" x="16" y="591" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="speakers" translatesAutoresizingMaskIntoConstraints="NO" id="Ri8-Se-pa5">
-                                <rect key="frame" x="162" y="591" width="50" height="50"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" image="speakers" highlightedImage="speakers_w" translatesAutoresizingMaskIntoConstraints="NO" id="zxL-ru-0If">
+                                <rect key="frame" x="211" y="591" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downloads" translatesAutoresizingMaskIntoConstraints="NO" id="FOB-UO-KBZ">
-                                <rect key="frame" x="283" y="591" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="9CH-SL-ybq"/>
-                                    <constraint firstAttribute="width" constant="50" id="FId-wE-98Q"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" image="downloads" highlightedImage="downloads_w" translatesAutoresizingMaskIntoConstraints="NO" id="eU4-3b-hki">
+                                <rect key="frame" x="309" y="591" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" image="schedule" highlightedImage="schedule_w" translatesAutoresizingMaskIntoConstraints="NO" id="B7o-by-NGH">
+                                <rect key="frame" x="113" y="591" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fade" translatesAutoresizingMaskIntoConstraints="NO" id="BQG-GA-gfm">
+                                <rect key="frame" x="-125" y="549" width="500" height="34"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="odT-ki-1R5">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="0yd-AS-kU3">
+                                <rect key="frame" x="177" y="627" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="sOc-6Z-r6T" firstAttribute="top" secondItem="0PF-Ds-QaX" secondAttribute="bottom" constant="24" id="1WF-aU-ync"/>
                             <constraint firstItem="0PF-Ds-QaX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="3v4-X7-OyA"/>
                             <constraint firstItem="0PF-Ds-QaX" firstAttribute="trailing" secondItem="odT-ki-1R5" secondAttribute="trailing" id="453-Z6-MXK"/>
                             <constraint firstItem="odT-ki-1R5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4le-gM-dd1"/>
-                            <constraint firstItem="Ri8-Se-pa5" firstAttribute="bottom" secondItem="sOc-6Z-r6T" secondAttribute="bottom" id="4mq-pQ-MAf"/>
-                            <constraint firstItem="Ri8-Se-pa5" firstAttribute="top" secondItem="sOc-6Z-r6T" secondAttribute="top" id="FLh-GO-mzu"/>
-                            <constraint firstItem="sOc-6Z-r6T" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="26" id="Gak-YZ-B4g"/>
-                            <constraint firstItem="sOc-6Z-r6T" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="26" id="HKj-fC-NqN"/>
+                            <constraint firstItem="0yd-AS-kU3" firstAttribute="top" secondItem="0PF-Ds-QaX" secondAttribute="bottom" constant="44" id="7WX-yB-yNb"/>
+                            <constraint firstItem="GUc-aH-Sl0" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="7ZJ-5N-Imp"/>
+                            <constraint firstItem="0yd-AS-kU3" firstAttribute="centerX" secondItem="0PF-Ds-QaX" secondAttribute="centerX" id="Aio-BH-LHu"/>
+                            <constraint firstAttribute="trailing" secondItem="BQG-GA-gfm" secondAttribute="trailing" id="DDh-hi-DXU"/>
+                            <constraint firstItem="BQG-GA-gfm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="529" id="GFm-Mk-jHQ"/>
                             <constraint firstAttribute="trailing" secondItem="odT-ki-1R5" secondAttribute="trailing" id="JxQ-v9-ZJ2"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="sOc-6Z-r6T" secondAttribute="bottom" constant="26" id="Q0J-pr-fDa"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="FOB-UO-KBZ" secondAttribute="trailing" constant="26" id="TDS-7c-2cW"/>
+                            <constraint firstAttribute="trailing" secondItem="GUc-aH-Sl0" secondAttribute="trailing" id="Kua-ya-UIP"/>
+                            <constraint firstItem="odT-ki-1R5" firstAttribute="top" secondItem="0PF-Ds-QaX" secondAttribute="bottom" constant="-583" id="O84-4P-Xt5"/>
+                            <constraint firstItem="GUc-aH-Sl0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="XRY-Ca-Qmn"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="odT-ki-1R5" secondAttribute="bottom" id="aW6-c4-TJ7"/>
+                            <constraint firstItem="BQG-GA-gfm" firstAttribute="bottom" secondItem="0PF-Ds-QaX" secondAttribute="bottom" id="clg-Dm-u2P"/>
                             <constraint firstItem="0PF-Ds-QaX" firstAttribute="leading" secondItem="odT-ki-1R5" secondAttribute="leading" id="emQ-Du-sLF"/>
-                            <constraint firstItem="Ri8-Se-pa5" firstAttribute="leading" secondItem="sOc-6Z-r6T" secondAttribute="trailing" constant="70" id="kBN-tL-NvS"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="sOc-6Z-r6T" secondAttribute="bottom" constant="26" id="nef-cT-XFY"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="FOB-UO-KBZ" secondAttribute="bottom" constant="26" id="reB-4a-zko"/>
                             <constraint firstItem="odT-ki-1R5" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="rhS-Nu-AHc"/>
-                            <constraint firstItem="Ri8-Se-pa5" firstAttribute="centerX" secondItem="odT-ki-1R5" secondAttribute="centerX" id="tik-A2-FUN"/>
+                            <constraint firstItem="odT-ki-1R5" firstAttribute="top" secondItem="GUc-aH-Sl0" secondAttribute="bottom" constant="-22" id="rlh-Mz-H8b"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="downloads" destination="FOB-UO-KBZ" id="GhZ-Ho-Nvz"/>
+                        <outlet property="downloads" destination="eU4-3b-hki" id="07z-RY-a9a"/>
+                        <outlet property="home" destination="OBM-Jl-v46" id="D4X-jM-1Fm"/>
                         <outlet property="mWebView" destination="0PF-Ds-QaX" id="Mca-ra-pxV"/>
-                        <outlet property="schedule" destination="sOc-6Z-r6T" id="1DL-oX-IrP"/>
-                        <outlet property="speakers" destination="Ri8-Se-pa5" id="aZW-d4-0gk"/>
+                        <outlet property="progress" destination="GUc-aH-Sl0" id="eaS-Cj-hlQ"/>
+                        <outlet property="schedule" destination="B7o-by-NGH" id="D4v-kk-aIp"/>
+                        <outlet property="speakers" destination="zxL-ru-0If" id="aea-46-bn4"/>
+                        <outlet property="spinner" destination="0yd-AS-kU3" id="Im8-89-tBf"/>
                         <outlet property="splash" destination="odT-ki-1R5" id="3Mq-pf-l6F"/>
                     </connections>
                 </viewController>
@@ -84,8 +95,14 @@
     </scenes>
     <resources>
         <image name="downloads" width="512" height="512"/>
+        <image name="downloads_w" width="512" height="512"/>
+        <image name="fade" width="500" height="50"/>
+        <image name="home" width="512" height="512"/>
+        <image name="home_w" width="512" height="512"/>
         <image name="schedule" width="512" height="512"/>
+        <image name="schedule_w" width="512" height="512"/>
         <image name="speakers" width="512" height="512"/>
+        <image name="speakers_w" width="512" height="512"/>
         <image name="splash" width="1080" height="1920"/>
     </resources>
 </document>
